[package]
name = "day14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
derive_more = "0.99.17"
grid = "0.11.0"
js-sys = "0.3.64"
nom = "7.1.3"
rust = "0.0.1"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["console", "WebGlProgram", "WebGlBuffer", "WebGlVertexArrayObject", "WebGl2RenderingContext", "WebGlShader", "HtmlCanvasElement", "Element", "Document", "Window", "console", "WebGlUniformLocation"] }

[lib]
crate-type = ["lib", "cdylib"]
