[package]
name = "day17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.65"
wasm-bindgen = "0.2.88"
web-sys = { version = "0.3.65", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window", "console"] }

[lib]
crate-type = ["lib", "cdylib"]
